--- a/components/02-molecules/basic-content/basic-content.scss
+++ b/components/02-molecules/basic-content/basic-content.scss
@@ -6,8 +6,10 @@
   $root: &;
 
   &#{$root}--with-background {
-    padding-left: $ct-basic-content-space-horizontal;
-    padding-right: $ct-basic-content-space-horizontal;
+    @include ct-breakpoint(m) {
+      padding-left: $ct-basic-content-space-horizontal;
+      padding-right: $ct-basic-content-space-horizontal;
+    }
   }
 
   @include ct-content();
